@@ -1,3 +1,9 @@
+2006-07-24  Andreas Schwab  <schwab@suse.de>
+
+	PR/2756
+	* read.c (read_a_source_file): Ignore unknown text after line
+	comment character.  Fix misleading comment.
+
 2006-07-24  Ralk Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* doc/all.texi, doc/as.texinfo, doc/c-arc.texi, doc/c-arm.texi,
